--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     --text: #333;
     --accent: var(--yellow);
   }
-
+.imagem-topo {
+  background: url('topo.png') no-repeat center center;
+  background-size: cover;
+  height: 250px;
+  width: 100%;
+}
   html {
     scroll-padding-top: 4rem;
   }
