--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     --accent: var(--yellow);
   }
 .imagem-topo {
-  background: url('Topo.png') no-repeat center center;
+  background: url('inicio.png') no-repeat center center;
   background-size: cover;
   height: 250px;
   width: 100%;
