--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <!DOCTYPE html>  
 <html lang="pt-PT">
 <head>
+<meta name="description" content="Centro de estudos e explicações em Massamá. Apoio escolar desde o 1.º ciclo ao ensino secundário. Caderno Mágico de Massamá.">
+<meta name="keywords" content="Centro de Estudos, Explicações, Massamá, Ensino, Apoio Escolar, Caderno Mágico">
+<meta name="author" content="Caderno Mágico de Massamá">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-  <title>Caderno Mágico</title>
+  <title>Caderno Mágico de Massamá - Centro de Estudos e Explicações</title>
   <style>
   :root {
     --beige: #d8c7a3; /* nova cor substituta do purple */
