--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="keywords" content="Centro de Estudos, Explicações, Massamá, Ensino, Apoio Escolar, Caderno Mágico">
 <meta name="author" content="Caderno Mágico de Massamá">
   <meta charset="UTF-8" />
+<meta name="google-site-verification" content="SDbRy12anUiic0p1h5koIJHVxLS59NTHWHpMWSQl4Bk" />
   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
   <title>Caderno Mágico de Massamá - Centro de Estudos e Explicações</title>
   <style>
