--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
   background-position: center center;
   background-size: cover;
   width: 100%;
-  height: auto;
-  aspect-ratio: 16/9; /* ou outro ratio que se adapte */
-}
+  height: 250px;
+ }
      html {
     scroll-padding-top: 4rem;
   }
